cmake_minimum_required(VERSION 3.19.1)

add_executable(abort_implementation abort_implementation.c)
add_executable(alternative_stack alternative_stack.c)
add_executable(fork_kill fork_kill.c)
add_executable(Not_reenterable Not_reenterable.c)
add_executable(prevsigmask prevsigmask.c)
add_executable(RTSIGNAL RTSIGNAL.c)
add_executable(RTSIGNAL_STANDARTSIGNAL RTSIGNAL_STANDARTSIGNAL.c)
add_executable(SA_RESETHAND SA_RESETHAND.c)
add_executable(SA_RESTART SA_RESTART.c)
add_executable(sigaction sigaction.c)
add_executable(SIGCONT SIGCONT.c)
add_executable(siginfo siginfo.c)
add_executable(sigmask sigmask.c)
add_executable(sigsetjmp_siglongjmp sigsetjmp_siglongjmp.c)
add_executable(sigsuspend sigsuspend.c)
add_executable(sigtimedwait sigtimedwait.c)

#set(GLOB Sources abort_implementation.c alternative_stack.c fork_kill.c Not_reenterable.c prevsigmask.c RTSIGNAL.c RTSIGNAL_STANDARTSIGNAL.c SA_RESETHAND.c SA_RESTART.c sigaction.c SIGCONT.c siginfo.c sigmask.c signalfd.c sigsetjmp_siglongjmp.c sigsuspend.c sigtimedwait.c)

#foreach(source ${Sources})
#    string(REPLACE ".c" "" main ${source})
#    add_executable(${main} ${source})
#endforeach()